# gRPC-Client-Benchmark

./: .gitignore  README.md  grpc_python_profile.py  image_service.proto  pyproject.toml
betterproto_grpclib_client/: README.md  __init__.py  build-protos.sh
betterproto_grpclib_client/image_service/: __init__.py
cpp_client/: README.md  __init__.py  build_protos.sh
protobuf_grpcio_client/: README.md  __init__.py  build-protos.sh  image_service_pb2.py  image_service_pb2_grpc.py
protobuf_grpclib_client/: README.md  __init__.py  __main__.py  build-protos.sh  image_service_grpc.py  image_service_pb2.py
pyo3_client/: Cargo.toml  README.md  __init__.py  __main__.py  build-protos.sh  build.rs  pyproject.toml
pyo3_client/proto/: image_service.proto
pyo3_client/src/: _lib_safe.rs  lib.rs
test-server/cpp/: Dockerfile  README.md  build.sh  cleanup.sh  config.sh  run  server.cpp  server_v1.cpp
test-server/rust/: Cargo.toml  README.md  build.rs  run
test-server/rust/src/: client.rs  server.rs
