[package]
name = "rs_image_client"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Taylor"]

[dependencies]
tonic = "*"
prost = "0.13"
futures-util = "*"
tokio = { version = "1.9", features = ["rt-multi-thread"] }
pyo3 = { version = "0.25", features = ["extension-module"] }

[lib]
name = "rs_image_client"
crate-type = ["cdylib"]

[build-dependencies]
tonic-build = "*"
protoc-bin-vendored = "3"