[package]
name = "image-service"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the ImageService gRPC server
name = "image-service-server"
path = "src/server.rs"

[[bin]] # Bin to run the ImageService gRPC client
name = "image-service-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
image = "0.24"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "*"